<resources>
    <string name="app_name">ShoeStore</string>
    <string name="app_title">The Shoe Store</string>
    <string name="welcome_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Vestibulum eu mi lacus. Pellentesque id lobortis dui.
        Vestibulum magna sapien, semper nec condimentum nec, ultrices et massa.
        Nulla eu odio posuere, ultrices erat sit amet, maximus lacus.
        Pellentesque dignissim nisi leo, eu luctus lorem vulputate in.
        Vestibulum facilisis est et maximus eleifend.
        Sed mollis tortor ac sem maximus tristique.
        Phasellus mollis sodales libero a tristique.</string>
    <string name="instructions_text">Instructions to use:\n\nSelect one shoe and see the details on details button.</string>
    <string name="logout">Logout</string>
    <string name="login">LOGIN</string>
    <string name="welcome">WELCOME</string>
    <string name="instructions">INSTRUCTIONS</string>
    <string name="shoe_list">SHOE LIST</string>
    <string name="shoe_detail">SHOE DETAIL</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="company">Company</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="description">Description</string>
    <string name="company_label">Company: %1$s</string>
    <string name="size_label">Size: %1$s</string>
    <string name="required_field_error">Field is required</string>
    <string name="shoe_image">Shoe image</string>
    <string name="welcome_title">Welcome</string>
    <string name="shoe_detail_title">Shoe Detail</string>
    <string name="instructions_title">Instructions</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="create_login">Create login</string>
    <string name="shoe_list_empty">Shoe list is empty!</string>
    <string name="shop">Shop</string>
</resources>
